# My-plane

fixedwing/: CMakeLists.txt  package.xml
fixedwing/cfg/: controller.cfg  follower.cfg
fixedwing/include/: Controller.h  EOM.h  Forces_Moments.h  Stability.h  States.h  Wind.h
fixedwing/launch/: spawn_mav.launch  start.launch  world.launch
fixedwing/msg/: EOM.msg  FAM.msg  command.msg  controller_command.msg  input.msg  state.msg
fixedwing/src/: Controller.cpp  EOM.cpp  Forces_Moments.cpp  Stability.cpp  States.cpp  Take_off.cpp  Wind.cpp
fixedwing/xacro/: fixedwing.xacro  plugin.xacro
mav_simulator-master/dynamics/include/dynamics/: mav_dynamics.h
mav_simulator-master/mav_viewer/scripts/: mav_viewer_node.py
mav_simulator-master/viewer/nodes/: plotter.py
mav_simulator-master/viewer/src/uav_plotter/: Plotter.py
